salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Super_Stage__c.field-meta.xml
<CustomField>
    <fullName>Super_Stage__c</fullName>
    <label>Super Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>