salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Boilers__c.field-meta.xml
<CustomField>
    <fullName>Systems_Boilers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Boilers</label>
    <type>Checkbox</type>
</CustomField>