salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Compressed_Air__c.field-meta.xml
<CustomField>
    <fullName>Systems_Compressed_Air__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Compressed Air</label>
    <type>Checkbox</type>
</CustomField>