salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Elevators__c.field-meta.xml
<CustomField>
    <fullName>Systems_Elevators__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Elevators</label>
    <type>Checkbox</type>
</CustomField>