salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Furnaces__c.field-meta.xml
<CustomField>
    <fullName>Systems_Furnaces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Furnaces</label>
    <type>Checkbox</type>
</CustomField>