salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Lighting_Controls__c.field-meta.xml
<CustomField>
    <fullName>Systems_Lighting_Controls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Lighting Controls</label>
    <type>Checkbox</type>
</CustomField>