salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Process_Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Systems_Process_Upgrades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Process Upgrades</label>
    <type>Checkbox</type>
</CustomField>