salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Pumps_Fans_Piping_Ducts__c.field-meta.xml
<CustomField>
    <fullName>Systems_Pumps_Fans_Piping_Ducts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Pumps Fans Piping Ducts</label>
    <type>Checkbox</type>
</CustomField>