salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Systems_Refrigeration__c.field-meta.xml
<CustomField>
    <fullName>Systems_Refrigeration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Refrigeration</label>
    <type>Checkbox</type>
</CustomField>