salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Annual_VGS_kW__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_VGS_kW__c</fullName>
    <label>Total Annual VGS kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>