salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Cooling_Savings_Kwh__c.field-meta.xml
<CustomField>
    <fullName>Total_Cooling_Savings_Kwh__c</fullName>
    <label>Total Cooling Savings Kwh</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>