salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Heating_Electrification_Savings_Kw__c.field-meta.xml
<CustomField>
    <fullName>Total_Heating_Electrification_Savings_Kw__c</fullName>
    <label>Total Heating Electrification Savings Kw</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>