salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Incentive_Amount__c</fullName>
    <label>Total Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>