salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_kW__c.field-meta.xml
<CustomField>
    <fullName>Total_kW__c</fullName>
    <label>Total kW</label>
    <summarizedField>Application_Line_Item__c.kW__c</summarizedField>
    <summaryForeignKey>Application_Line_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>