salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_kW_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_kW_Savings__c</fullName>
    <label>Total kW Savings</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>