salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Lifetime_VGS_kWh__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_VGS_kWh__c</fullName>
    <label>Total Lifetime VGS kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>