salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_MMBTU_Electric_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_MMBTU_Electric_Savings__c</fullName>
    <label>Total MMBTU Electric Savings</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>