salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Cost__c</fullName>
    <formula>Project_Measure_Cost__c - Total_Project_Incentive_with_Capping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>