salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Project_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Costs__c</fullName>
    <label>Total Project Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>