salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Therms_MMBTU__c.field-meta.xml
<CustomField>
    <fullName>Total_Therms_MMBTU__c</fullName>
    <formula>Total_Therm_Savings__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Therms MMBTU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>