salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Total_Therms_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Therms_Savings__c</fullName>
    <label>Total Therms Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>