salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Trigger_C_I_Portal_Application_for_eSign__c.field-meta.xml
<CustomField>
    <fullName>Trigger_C_I_Portal_Application_for_eSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger C&amp;I Portal Application for eSign</label>
    <type>Checkbox</type>
</CustomField>