salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Urgent_Project__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Project</label>
    <type>Checkbox</type>
</CustomField>