salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/W9_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>W9_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9 Uploaded</label>
    <type>Checkbox</type>
</CustomField>