salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Water_Source_Heat_Pump__c.field-meta.xml
<CustomField>
    <fullName>Water_Source_Heat_Pump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Source Heat Pump</label>
    <type>Checkbox</type>
</CustomField>