salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>