salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/listViews/Action_Required.listView-meta.xml
<ListView>
    <fullName>Action_Required</fullName>
    <columns>NAME</columns>
    <columns>Action_Required__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Installation_Completion_Date__c</columns>
    <columns>Project_Incentive_Amount__c</columns>
    <columns>Total_kWH_Savings__c</columns>
    <columns>Total_Therm_Savings__c</columns>
    <columns>Total_MMBTU__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Action_Required__c</field>
        <operation>equals</operation>
        <value>Upload Additional Documents</value>
    </filters>
    <label>Action Required</label>
</ListView>