salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/listViews/Cancelled.listView-meta.xml
<ListView>
    <fullName>Cancelled</fullName>
    <columns>NAME</columns>
    <columns>Action_Required__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>Cancelled_Date__c</columns>
    <columns>Project_Incentive_Amount__c</columns>
    <columns>Total_kWH_Savings__c</columns>
    <columns>Total_Therm_Savings__c</columns>
    <columns>Total_MMBTU__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>vlocity_cmt__Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled</label>
</ListView>