salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/listViews/Pendign_Payment_Approval.listView-meta.xml
<ListView>
    <fullName>Pendign_Payment_Approval</fullName>
    <columns>NAME</columns>
    <columns>Action_Required__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>Date_Submitted_For_Approval__c</columns>
    <columns>Payment_Approval_Date__c</columns>
    <columns>Project_Incentive_Amount__c</columns>
    <columns>Total_kWH_Savings__c</columns>
    <columns>Total_Therm_Savings__c</columns>
    <columns>Total_MMBTU__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>vlocity_cmt__Status__c</field>
        <operation>equals</operation>
        <value>Pending Payment Approval</value>
    </filters>
    <label>Pending Payment Approval</label>
</ListView>